// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PeriodsForm component > renders as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c0 {
  margin: 1.6rem;
  padding: 1.6rem;
  background-color: white;
  text-align: left;
  border-radius: 0.5rem;
}

.c2 {
  font-weight: bold;
  color: var(--theme-blue-100);
  border-bottom: 0.2rem var(--theme-blue-90) solid;
  margin-bottom: 2.4rem;
}

.c1 {
  min-width: 130rem;
}

<div
    class="c0 form-section c1"
  >
    <h2
      class="c2"
    >
      <div
        class="no-gutters row"
      >
        <div
          class="align-content-end col"
        >
          <div
            class="no-gutters justify-content-between align-items-end row"
          >
            <div
              class="my-1 col-auto"
            >
              Payment Periods
            </div>
            <div
              class="col-auto"
            >
              <span
                style="float: right;"
              >
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-period-actions-cannot-add-tooltip"
                  id="period-actions-cannot-add-tooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </h2>
    <div
      class="collapse show"
    >
      <div
        class="table no-zebra-rows"
        data-testid="leasePaymentsTable"
        role="table"
      >
        <div
          class="thead thead-light"
        >
          <div
            class="tr"
            role="row"
            style="display: flex; flex: 1 0 auto; min-width: 395px;"
          >
            <div
              class="th"
              style="width: 4.7rem;"
            />
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              />
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 100 0 auto; min-width: 55px; width: 100px; justify-content: center; text-align: center; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Start date - end date
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Payment frequency
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Payment due
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Expected payment ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-expectedPaymentTooltip"
                  id="expectedPaymentTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 25 0 auto; min-width: 30px; width: 25px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                GST?
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 35 0 auto; min-width: 30px; width: 35px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                GST ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-gstAmountTooltip"
                  id="gstAmountTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 45 0 auto; min-width: 30px; width: 45px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Expected total ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-expectedTotalTooltip"
                  id="expectedTotalTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Expected period ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-expectedPeriodTooltip"
                  id="expectedPeriodTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Actual total ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-actualTotalTooltip"
                  id="actualTotalTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Exercised?
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-exercisedTooltip"
                  id="exercisedTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 40px; width: 40px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Actions
              </div>
            </div>
          </div>
        </div>
        <div
          class="no-rows-message"
        >
          There is no corresponding data
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PeriodsForm component > renders with data as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c0 {
  margin: 1.6rem;
  padding: 1.6rem;
  background-color: white;
  text-align: left;
  border-radius: 0.5rem;
}

.c2 {
  font-weight: bold;
  color: var(--theme-blue-100);
  border-bottom: 0.2rem var(--theme-blue-90) solid;
  margin-bottom: 2.4rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 [id^='edit-period'] {
  color: #428bca;
}

.c4 [id^='delete-period'] {
  color: #428bca;
}

.c4 [id^='delete-period']:hover {
  color: #CE3E39;
}

.c4 .btn.btn-primary {
  background-color: transparent;
  padding: 0;
}

.c1 {
  min-width: 130rem;
}

<div
    class="c0 form-section c1"
  >
    <h2
      class="c2"
    >
      <div
        class="no-gutters row"
      >
        <div
          class="align-content-end col"
        >
          <div
            class="no-gutters justify-content-between align-items-end row"
          >
            <div
              class="my-1 col-auto"
            >
              Payment Periods
            </div>
            <div
              class="col-auto"
            >
              <span
                style="float: right;"
              >
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-period-actions-cannot-add-tooltip"
                  id="period-actions-cannot-add-tooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </h2>
    <div
      class="collapse show"
    >
      <div
        class="table no-zebra-rows"
        data-testid="leasePaymentsTable"
        role="table"
      >
        <div
          class="thead thead-light"
        >
          <div
            class="tr"
            role="row"
            style="display: flex; flex: 1 0 auto; min-width: 395px;"
          >
            <div
              class="th"
              style="width: 4.7rem;"
            />
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              />
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 100 0 auto; min-width: 55px; width: 100px; justify-content: center; text-align: center; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Start date - end date
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Payment frequency
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Payment due
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Expected payment ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-expectedPaymentTooltip"
                  id="expectedPaymentTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 25 0 auto; min-width: 30px; width: 25px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                GST?
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 35 0 auto; min-width: 30px; width: 35px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                GST ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-gstAmountTooltip"
                  id="gstAmountTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 45 0 auto; min-width: 30px; width: 45px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Expected total ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-expectedTotalTooltip"
                  id="expectedTotalTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Expected period ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-expectedPeriodTooltip"
                  id="expectedPeriodTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Actual total ($)
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-actualTotalTooltip"
                  id="actualTotalTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Exercised?
                <span
                  class="tooltip-icon"
                  data-testid="tooltip-icon-exercisedTooltip"
                  id="exercisedTooltip"
                >
                  <svg
                    class="tooltip-icon"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="th"
              colspan="1"
              role="columnheader"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 40px; width: 40px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
            >
              <div
                class="sortable-column"
              >
                Actions
              </div>
            </div>
          </div>
        </div>
        <div
          class="tbody"
          role="rowgroup"
        >
          <div
            class="tr-wrapper"
          >
            <div
              class="tr"
              role="row"
              style="display: flex; flex: 1 0 auto; min-width: 395px;"
            >
              <div
                class="td expander svg-btn"
                data-testid="table-row-expander-"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m10 17 5-5-5-5v10z"
                  />
                  <path
                    d="M0 24V0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                <div
                  class="c3 align-items-center"
                >
                  <b>
                    Period 1
                  </b>
                   
                </div>
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 100 0 auto; min-width: 55px; width: 100px; justify-content: center; text-align: center; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                 - 
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              />
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 60 0 auto; min-width: 30px; width: 60px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              />
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                $0.00
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 25 0 auto; min-width: 30px; width: 25px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                N
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 35 0 auto; min-width: 30px; width: 35px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              />
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 45 0 auto; min-width: 30px; width: 45px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                $0.00
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                $0.00
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              />
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: left; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                N
              </div>
              <div
                class="td"
                role="cell"
                style="box-sizing: border-box; flex: 40 0 auto; min-width: 40px; width: 40px; justify-content: right; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
                title=""
              >
                <div
                  class="c3 c4"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
